--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,7 @@
 <ng-container *ngFor="let item of timerObjects">
 <app-timer></app-timer>
 </ng-container>
+
+<ng-container>
+  <app-time-chart></app-time-chart>
+</ng-container>
